Replace DCAP with AzureCLI
Signed-off-by: Andrey Zhereshchin <2170339+andreyzher@users.noreply.github.com>

--- a/ansible/playbook.yaml
+++ b/ansible/playbook.yaml
@@ -38,9 +38,9 @@
         state: present
         update_cache: yes
 
-    - name: Install Azure DCAP client
+    - name: Install Azure client
       apt:
-        name: az-dcap-client
+        name: azure-cli
         state: present
 
     - name: Configure CI user keys, if specified
