Only run Docker workflow when Dockerfile is changed

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,6 +1,8 @@
 name: Docker
 on:
   push:
+    paths:
+      - 'Dockerfile'
     branches: [ main ]
     # Publish semver tags as releases.
     tags: [ 'v*.*.*' ]
