--- a/ansible/sample-inventory.yaml
+++ b/ansible/sample-inventory.yaml
@@ -7,7 +7,8 @@ all:
       vars:
         ansible_user: developer
         ansible_ssh_private_key_file: "{{ lookup('env','HOME') }}/.ssh/server_key.pem"
-        ci_user: ci-user
-        ci_user_keys:
-          - ssh-rsa ....
-          - ssh-rsa ....
+        ansible_ssh_common_args: '-o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null'
+        # ci_user: ci-user
+        # ci_user_keys:
+        #   - ssh-rsa ....
+        #   - ssh-rsa ....
